# weapon

./: Cargo.toml  Readme.md
src/: connector.rs  main.rs  payload.rs  processor.rs
src/platform/: config.rs  error.rs  mod.rs
src/platform/linux/: device.rs  fd.rs  mod.rs  sys.rs
