[package]
name = "weapon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ctrlc = "3"
thiserror = "1"
libc = "0.2"
nix = "0.23"
log = "0.4"
env_logger = "0.9"